# VMR_ROS

./: .gitlab-ci.yml  CMakeLists.txt  README.md  README.zh-CN.md  build.sh  package.xml  start.sh  test.sh
config/: lx_config.yaml
launch/: lx_bringup.launch.py  lx_hontai.launch  vmr_bringup.launch.py  vmr_hontai.launch
msg/: DogState.msg  Exception.msg  LiftState.msg  Light.msg  RobotException.msg  RobotState.msg  ServoState.msg
src/: lx_ros.cpp  lx_ros.h  rpc_data.h  vmr_data.h  vmr_ros.cpp  vmr_ros.h
srv/: LiftCtrl.srv  LightCtrl.srv  ProcessPose.srv  TaskResult.srv
